# Audio-transcriber

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
config/: config.yaml
src/transcriber_app/: logging_config.py  main.py  model_manager.py  paths.py  pipeline.py  transcription.py  utils.py
src/transcriber_app/config/: config_default.yaml
tests/: test_chunking.py  test_pipeline.py  test_subtitles.py
