[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-transcriber"
version = "0.1.0"
description = "Audio to text transcription pipeline with speaker diarization and subtitle generation"
authors = [
	{ name="Sujay Ray" }
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "dotenv",
    "pydub"
]

[project.scripts]
transcriber = "transcriber_app.main:main"

[tool.setuptools]
packages = { find = { where = ["src"] } }